--- a/package.json
+++ b/package.json
@@ -14,10 +14,10 @@
     "react-dom": "^19.0.0"
   },
   "devDependencies": {
-    "@types/node": "24.0.3",
-    "@types/react": "19.1.8",
+    "@types/node": "^24.0.3",
+    "@types/react": "^19.1.8",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
-    "typescript": "5.8.3"
+    "typescript": "^5.8.3"
   }
 }
